@@ -30,6 +30,7 @@ examples/create_and_print_value_time.pl
 examples/create_and_print_value_time_translated.pl
 examples/utils_print_aliases.pl
 examples/utils_print_descriptions.pl
+examples/utils_print_forms.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
